welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: not found: value vare
  	if (nums(vare)==lookingFor)
                 ^indexOfValue:4: error: not found: value vare
   {return vare}
           ^indexOfValue:2: error: type mismatch;
 found   : Unit
 required: Int
    for (i <- 0 to nums.length-1){
           ^